+ galerei, +hom, aktualizacii

--- a/Kiselövsk.mw
+++ b/Kiselövsk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Kiselövskan lidnanznam
  | Flag text = Kiselövskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 90,980
- | Voz' = 2017
+ | Eläjiden lugu = 85,339
+ | Voz' = 2021
  | Pind = 160
  | Fail = Ул 50 лет октября - panoramio.jpg
- | Pämez' = Sergei Lavrentjev<br />(keväz'ku 2003—)
+ | Pämez' = Kirill Balaganskii<br />(uhoku 2022—,<br />''velgusentäutai'')
  | Telefonkod = +7-38464-xx-xxx
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -19,7 +19,7 @@
 == Istorii ==
 Ende türkad-teleutad elihe lidnan sijas. Läz 1770 vot sirdnikad Keskuzvenämaspäi paniba ''Afonino''-, ''Čerkasovo''- i ''Kiselövk''-küliden alusid. Vn 1917 redukus zavottihe sada [[kivihil'|kivihil't]] Kiselövkan kaivudespäi. Vl 1932 žilo kaivudenno sai radnikžilon statusad ''Kiselövskii'' nimenke, sil-žo vodel ühtištuihe lähižidenke külidenke. Kätihe radnikžilod lidnaks agjan alištusenke vn 1936 20. päiväl vilukud.
 
-Lidn šingotase [[kivihil'|kivihilen]] samižel (4 kar'jerad) i 2 küllästamižfabrikal, kaivuzmašiništon tegimel, sömtegimištol (konditerine edheotand, maidtegim, kolbasan pästand), mugažo poukahtuzsubstancijoiden tegim, mebel'fabrik i Afoninon savičtegim ratas.
+Kiselövsk šingotase [[kivihil'|kivihilen]] samižel (4 kar'jerad) i 2 küllästamižfabrikal, kaivuzmašiništon tegimel, sömtegimištol (konditerine edheotand, maidtegim, kolbasan pästand), mugažo poukahtuzsubstancijoiden tegim, mebel'fabrik i Afoninon savičtegim ratas.
 
 == Geografijan andmused ==
 Lidn sijadase Abanjogen ({{lang-ru|Аба́}}, 71 km pitte) üläjoksmusen randal ([[Tom' (Obin ližajogi)|Tomin]] hura ližajogi, lankteb [[Novokuzneck]]as), 320 m ü.m.t. keskmäižel korktusel, Salairan kräžan ezimägištol. Ottas vet Üläčumišan vezivaradimespäi 15 km suvipäivlaskmha lidnaspäi. Matkad [[Kemerovo]]hosai om 154 km pohjoižhe orhal, 176 km avtol vai raudtedme. Lähembaine lidn om [[Prokopjevsk]] ani suvhe, kundaližen transportan maršrutad oma ühthižed kahtes lidnas. Molembad lidnad mülüdas [[Novokuzneck]]an lidnaglomeracijha (1,15 mln rist. vl 2010).
@@ -27,9 +27,28 @@ Lidn sijadase Abanjogen ({{lang-ru|Аба́}}, 71 km pitte) üläjoksmusen randa
 Koume žilod i kaks' küläd mülüdas lidnümbrikho Kiselövskan ližaks. Lidnümbrikon pind — 292,85 km². Lidnümbrik röunatab [[Prokopjevsk]]an lidnümbrikonke suves, [[Prokopjevskan rajon]]anke päivnouzmas i päivlaskmas, [[Belovon rajon]]anke pohjoižes.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 98 365 ristitud, lidnümbrikon — 103 019 ristitud. Kaikiš suremb lidnan ristitišt oli 142 tuh. eläjid vl 1962. Vl 2018 kaik 95 160 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 98 365 ristitud, lidnümbrikon — 103 019 ristitud. Kaikiš suremb lidnan ristitišt oli 142 tuh. eläjid vl 1962. Vl 2018 kaik 95 160 ristitud elihe lidnümbrikos.
 
-Professionaližen opendusen aluzkundad: Kiselövskan kaivuztehnikum, politehnine tehnikum, pedagogine kolledž.
+Professionaližen opendusen aluzkundad: Kiselövskan kaivuztehnikum<ref>[http://www.kisgt.ru/ Kiselövskan kaivuztehnikuman sait (''kisgt.ru'').] {{ref-ru}}</ref>, politehnine tehnikum, pedagogine kolledž<ref>[http://kslpk.ucoz.ru/ Kiselövskan pedagogižen kolledžan sait (''kslpk.ucoz.ru'').] {{ref-ru}}</ref>.
+
+Edeližed lidnümbrikon pämehed: Sergei Lavrentjev (keväz'ku 2003 — kül'mku 2018), Maksim Škarabeinikov (viluku 2019 — kül'mku 2021).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Белый дом - panoramio (3).jpg|Lidnümbrikon administracijan sauvuz (2014)
+Мфц - panoramio.jpg|Lidnan valdkundaline [[äifunkcionaline keskuz]] (2014)
+Kiselevsk-Church2.JPG|Jumalanmaman «Pigaikundlii»-jumalaižen pühäpert', vn 2004 nägu
+Шахта - panoramio.jpg|Hilen samižen kaivuz vl 2010
+Рынок - panoramio (64).jpg|Torgusen sauvuz vl 2014
+Школа.... - panoramio.jpg|Üks' lidnan školoišpäi, 1. sügüz'ku 2015
+Центр Детского творчества - panoramio.jpg|Lapsiden sädamižen keskuz (2014)
+Ksl.jpg|«Šahtör»-sportkompleks lidnan keskuzpalas (2006, ''Kaivai'')
+Автовокзал - panoramio (34).jpg|Avtobusstancii vl 2014
+Жд вокзал - panoramio (15).jpg|Kiselövsk-päraudtestancijan sauvuz vl 2015
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.42ks.ru/ Kiselövskan lidnümbrikon Rahvahan Ezitajiden Nevondkundan oficialine sait (''42ks.ru'').] {{ref-ru}}
