+ galerei, +hom, aktualizacii

--- a/Leninsk_Kuzneckii.mw
+++ b/Leninsk_Kuzneckii.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Leninsk Kuzneckijan lidnanznam
  | Flag text = Leninsk Kuzneckijan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 96,921
- | Voz' = 2017
+ | Eläjiden lugu = 93,288
+ | Voz' = 2021
  | Pind =
  | Fail = ЛенинскВиды2013.png
  | Pämez' = Konstantin Tihonov<br />(heinku 2018—)
@@ -19,9 +19,9 @@
 == Istorii ==
 Eländpunkt mainitase ezmäižen kerdan vl 1759 kuti ''Kol'čugino-parččom'' ({{lang-ru|заимка Кольчугино}}) alusenpanijan radmižen mödhe ({{lang-ru|кольчуга}} «renghištpaid»). Vl 1883 avaitihe ezmäšt «Satuz»-kaivut (ven. <em>Успех</em>) Kol'čuginonno, i järgeline külä kändase kivihilen samižen keskuseks. Vl 1914 raudte tuli lidnha. Vll 1922−1925 nimitihe ''Lenino-žiloks''. Vn 1925 6. päiväl kezakud žilo sai lidnan statusad ''Leninsk Kuzneckii'' nimenke erištamha Leninsk Omskii-lidnaspäi, vides vodes ühtištuihe jäl'gmäšt [[Omsk]]anke.
 
-Mülütihe Polisajevo- i Krasnogorskii-žiloid Leninsk Kuzneckijha vl 1987. Vl 1989 tühjitihe lidnan jagandad kahthe rajonha i erigoittihe [[Polisajevo]]d, anttihe sille lidnan statusad. Vodele 2008 saihe 1 mlrd tonnoid kivihil't.
+Mülütihe Polisajevo- i Krasnogorskii-žiloid Leninsk Kuzneckijha vl 1987. Vl 1989 tühjitihe lidnan jagandad kahteks rajonaks i erigoittihe [[Polisajevo]]d, anttihe sille lidnan statusad. Vodele 2008 saihe 1 mlrd tonnoid kivihil't.
 
-Lidn šingotase [[kivihil'|kivihilen]] samižel (3 kaivut, enamba 10 mln tonnoid vodes), himižel sarakol (koksan tehmine, materialad), metalližiden tegesiden edheotandoil, sömtegimištol, omblendedheotandoil (sobad i kengäd), mugažo mecanümbriradmižen edheotand i sauvondmaterialiden tegim ratas.
+Leninsk Kuzneckii šingotase [[kivihil'|kivihilen]] samižel (koume kaivut, enamba 10 mln tonnoid vodes), himižel sarakol (koksan tehmine, materialad), metalližiden tegesiden edheotandoil, sömtegimištol, omblendedheotandoil (sobad i kengäd), mugažo mecanümbriradmižen edheotand i sauvondmaterialiden tegim ratas.
 
 == Geografijan andmused ==
 Lidn sijadase [[In' (Obin alaližajogi)|Inänjogen]] ({{lang-ru|Иня́}}) oiktal randal, [[Kuzneckan katl'uz|Kuzneckan katl'usen]] keskuses, 230 m ü.m.t. keskmäižel korktusel. Matkad [[Kemerovo]]hosai om 77 km pohjoižhe orhal, 90 km avtol vai raudtedme. Lähembaine lidn om [[Polisajevo]] ani suvipäivnouzmha, kundaližen transportan maršrutad oma ühthižed kahtes lidnas.
@@ -29,9 +29,26 @@ Lidn sijadase [[In' (Obin alaližajogi)|Inänjogen]] ({{lang-ru|Иня́}}) oikt
 Nikitinskii-žilo (2 257 rist. vl 2010) i Industrii-žilo raudtestancijanno (15 rist. vl 2010) mülüdas lidnümbrikho Leninsk Kuzneckijan ližaks. Lidnümbrikon pind — 112,72 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 101 666 ristitud, lidnümbrikon — 103 938 ristitud. Kaikiš suremb lidnan ristitišt oli 135 tuh. eläjid vl 1986 i 169 tuh. eläjid vl 1987. Vl 2018 kaik 98 254 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 101 666 ristitud, lidnümbrikon — 103 938 ristitud. Kaikiš suremb lidnan ristitišt oli 135 tuh. eläjid vl 1986 i 169 tuh. eläjid vl 1987 ([[Polisajevo]]-lidnanke). Vl 2018 kaik 98 254 ristitud elihe lidnümbrikos.
 
-Professionaližen opendusen aluzkundad: Leninsk Kuzneckijan kaivuztehnikum, politehnine tehnikum, olimpižen rezervan profškol, Kemerovon agjan medicinižen kolledžan filial, Kemerovon professionaliž-tehnižen kolledžan filial, Tomskan valdkundaližen arhitekturan da sauvondan universitetan filial.
+Professionaližen opendusen aluzkundad: Leninsk Kuzneckijan kaivuztehnine tehnikum<ref>[http://lkgtt.ru/ Leninsk Kuzneckijan kaivuztehnižen tehnikuman sait (''lkgtt.ru'').] {{ref-ru}}</ref>, politehnine tehnikum<ref>[http://lkpt.ru/ Leninsk Kuzneckijan politehnižen tehnikuman sait (''lkpt.ru'').] {{ref-ru}}</ref>, olimpižen rezervan profškol, Kemerovon agjan medicinižen kolledžan filial, Kemerovon professionaliž-tehnižen kolledžan filial, Tomskan valdkundaližen arhitekturan da sauvondan universitetan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+|
+Монумент 1 000 000 000 т. угля Кольчугинского рудника.jpg|Monument Kol'čuginon kaivuden milliardandele hilen tonnale (2013)
+|
+|
+|
+|
+Ленинск-Кузнецкий горнотехнический техникум (бывш.колледж).jpg|Leninsk Kuzneckijan kaivuztehnine tehnikum (2013, ende kolledž)
+Дворец Спортивной Гимнастики г.Ленинск-Кузнецкий.jpg|Sportgimnastikan pert'kulu (2013)
+|
+|
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.leninsk-kuz.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''leninsk-kuz.ru'').] {{ref-ru}}
