--- a/Leninsk_Kuzneckii.mw
+++ b/Leninsk_Kuzneckii.mw
@@ -35,16 +35,16 @@ Professionaližen opendusen aluzkundad: Leninsk Kuzneckijan kaivuztehnine tehnik
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-|
+ОКЦОЗШ, Ленинск-Кузнецкий.jpg|Agjan klinine keskuz kaivajiden tervhuden kaičendas (2016)
 Монумент 1 000 000 000 т. угля Кольчугинского рудника.jpg|Monument Kol'čuginon kaivuden milliardandele hilen tonnale (2013)
-|
-|
-|
-|
+Фонтан в районе шахты Рубана.JPG|Fontan i ortodoksižen hristanuskondan pühäpert' Rubanan kaivuden rajonas, vn 2015 nägu
+Ленинск-Кузнецкий, ул. Горького, 16, 2.jpg|Lapsiden čomamahtoine škol nomer 4 (2017, ende «Leninskugol'»-trestan sauvuz, om letud vl 1913)
 Ленинск-Кузнецкий горнотехнический техникум (бывш.колледж).jpg|Leninsk Kuzneckijan kaivuztehnine tehnikum (2013, ende kolledž)
+ДК им.Е.Ярославского Ленинск-Кузнецкий.jpg|Kul'turkeskuz E. Jaroslavskijan nimed (2013)
+Развлекательный центр "Победа" в городе Ленинск-Кузнецкий..jpg|«Pobeda»-bobuštuzkeskuz (2012, ''Vägestuz'')
 Дворец Спортивной Гимнастики г.Ленинск-Кузнецкий.jpg|Sportgimnastikan pert'kulu (2013)
-|
-|
+Ленинск-Кузнецкий автовокзал.jpg|Avtobusstancii vl 2013
+Ленинск-Кузнецк, Железнодорожный вокзал, 1.jpg|Leninsk Kuzneckii I-päraudtestancijan sauvuz vl 2017
 </gallery>
 
 == Homaičendad ==
