/* Kädehe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Käzi.mw
+++ b/Käzi.mw
@@ -30,14 +30,19 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 == Kädehe sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
+* ''Andad käzil, a otad jaugoil.'' (tulese kävuda pördamha velgad)
 * ''Ei niken sündu kirvez kädes.''
 * ''Ei ole ni-midä pehmedamb maman kät.''
+* ''Kel ohjased kädes, se i ohjandab.''
 * ''Kelel kut taht, käzil ala koske.''
 * ''Kus kibed, sid' i käded, kus armaz, sid' i sil'mad.''
 * ''Käzi käden pezeb, blöd blödan katab.''
+* ''Käzi käden pezeb, i molembad oma puhthad.''
 * ''Käzi pit'k, ulotub kaiktäna.''
+* ''Käzil jo ed ladi.''
 * ''Mehel om mela kädes, venehen jumal veb.''
 * ''Miččen kobr kändab, mugoman i hibj kandab.''
+* ''Midä käzi tegeb, sidä sil'm kacub.''
 * ''Ota kädehe dai tedištad.''
 * ''Otajan käzi ei surdu, a andajan surdub.''
 * ''Sil'mad varaitas, käded ratas.''
