/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -19,6 +19,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 
 == Ekonomikha sidodud vepsän muštatišed ==
 <blockquote>
+* ''Andad käzil, a otad jaugoil.'' (tulese kävuda pördamha velgad)
 * ''Eci, kut leibäd ecid, siloi löudad.''
 * ''Edemba hutid, lähemba otad.''
 * ''Ei elokaz om, kudamb elon sab, a elokaz om, kudamb varjoičeb.''
@@ -30,12 +31,14 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Hüvä da veraz, paha da ičeiž.''
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kebnas tuli, kebnas läksi.''
+* ''Kel ohjased kädes, se i ohjandab.''
 * ''Kenen tavar, ka se i arvon paneb.''
 * ''Kolijalpäi velgad ed ota.''
 * ''Korman ei käske.'' (rahoid ei ole)
 * ''Kut sä minei, muga i mä sinei.''
 * ''Kuverz' taht rada, hüvähä ei mäne.''
 * ''Küzuda eile vargastada. / Küzundas ei lögoi.''
+* ''Käzil jo ed ladi.''
 * ''Läksin nitmaha, dai vikatehen unohtin.''
 * ''Lämoipalod mustoil ed sambuta.''
 * ''Mel't-se ei möskekoi.''
