/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -11,6 +11,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 <blockquote>
 * ''Ala pagiže min tedad, a teda min pagižed.''
 * ''Čoma sana i kivehe reigun tegeb.''
+* ''Ende mez' man möb, edel kut sanan söb.''
 * ''Ei sur' sana sud haugoi.''
 * ''Kaiked tot akale ala sanu.''
 * ''Kurdhele kaks' kerdad ei sanugoi.''
