--- a/Nagr.mw
+++ b/Nagr.mw
@@ -9,6 +9,7 @@ Nagr oli [[ristitunvuiččed oblezjanad|ristitunvuiččiden oblezjanoiden]] i ri
 <blockquote>
 * ''Ehtal itkend, homencel nagrand.''
 * ''Kažin nagr, hiren voik.''
+* ''Mindai nagrad, a ümbri ičeiž om ilod.''
 * ''Om paremb kacta nagrajan suhu, mi itkijan.''
 * ''Üks' su i nagrab i itkeb.''
 </blockquote>
