--- a/Kagl.mw
+++ b/Kagl.mw
@@ -3,6 +3,11 @@
 
 Kagl tegeb päd likujaks hibjrungon rindataden, i se abutab orijentiruindale avarudes, [[söm]]än tabadandale, kaičendale da äkkiližele londale. Kaglan aluz om kaglanrodad.
 
+== Kaglha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Pit'k om kagl, a pä ülemba.''
+</blockquote>
+
 {{Commons|Category:Necks}}
 
 {{stub}}
