/* Pähä sidodud vepsän muštatišed */ +

--- a/Pä.mw
+++ b/Pä.mw
@@ -32,6 +32,7 @@ Südäimižed:
 * ''Kelel päd ed söta.''
 * ''Lajind satatest ei tege, kuni pul pähä ei iške.''
 * ''Oliži nišk, a länged löudasoiš.''
+* ''Pit'k om kagl, a pä ülemba.''
 * ''Pän kibištab, perskele kebnemb om.''
 * ''Ülemba päd korvad ei kazgoi.''
 </blockquote>
