/* Ristitun hibjaha sidotud vepsän muštatišed */ +

--- a/Ristitun_hibj.mw
+++ b/Ristitun_hibj.mw
@@ -8,7 +8,9 @@ Ristitun hibjas erištadas [[pä]]d, [[kagl]]ad, [[hibjrung]]od, [[käzi|ülä-]
 <blockquote>
 * ''Astud, ka sil'mäd avaida, a su saupta.''
 * ''Miččen kobr kändab, mugoman i hibj kandab.''
+* ''Persken al om läm', a nenan al om vilu.''
 * ''Pidaiži sil'mile olda edes i tagan.''
+* ''Pit'k om kagl, a pä ülemba.''
 * ''Ülemba päd korvad ei kazgoi.''
 </blockquote>
 
