--- a/Mez'.mw
+++ b/Mez'.mw
@@ -24,6 +24,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Küläd eile koiratomad, mad eile mehetomad.''
 * ''Mehel om mela kädes, venehen jumal veb.''
+* ''Meheta jäl'ged ei tegesoiš.''
 * ''Mez' ei voi olda sobita.''
 * ''Mez' ei voi olda sömäta.''
 * ''Mez' ei völ koliške, a kutjal söttas.''
