/* Kädehe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Käzi.mw
+++ b/Käzi.mw
@@ -36,6 +36,7 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 * ''Kel ohjased kädes, se i ohjandab.''
 * ''Kelel kut taht, käzil ala koske.''
 * ''Kus kibed, sid' i käded, kus armaz, sid' i sil'mad.''
+* ''Käded oma ühted, ei ole niid ühesa.'' (ei voi ehttä tehta kaiked)
 * ''Käzi käden pezeb, blöd blödan katab.''
 * ''Käzi käden pezeb, i molembad oma puhthad.''
 * ''Käzi pit'k, ulotub kaiktäna.''
