/* Üks'-lugusanha sidodud vepsän muštatišed da ozoitesed */ +

--- a/1_(lugu).mw
+++ b/1_(lugu).mw
@@ -16,6 +16,7 @@ Miččen taht lugun äikerdoičend ühteks andab sidä-žo lugud, jagamine ühte
 * ''Ei päiväine ühtei ühtes čuraspäi pašta.''
 * ''Hüvä vaza kaht emid imeb, a paha ühten-ki kadotab.''
 * ''Kaks' kondjad ühtes pezas ei voigoi eläda.''
+* ''Käded oma ühted, ei ole niid ühesa.'' (ei voi ehttä tehta kaiked)
 * ''Ojatin lapsed seičemen üht ei varaikoi.''
 * ''Om pök söb seičeme sömäd, toine pök söb ühten sömän i sen penikaižen.''
 * ''Pu ei lankte ühtel painandal.''
