--- a/9_(lugu).mw
+++ b/9_(lugu).mw
@@ -4,6 +4,10 @@
 == Lugun ičendad ==
 * Nece lugu om palakaz.
 
-{{stub}}
+== Ühesa-lugusanha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Käded oma ühted, ei ole niid ühesa.'' (ei voi ehttä tehta kaiked)
+</blockquote>
 
+{{stub}}
 [[Kategorii:Lugusanad|9]]
