/* Lihaze sidodud vepsän muštatišed */ +

--- a/Liha.mw
+++ b/Liha.mw
@@ -17,6 +17,7 @@ Lihan vozne tehmine ühtele hengele om 33,2 kg, valdkundad-liderad da päeksport
 == Lihaze sidodud vepsän muštatišed ==
 <blockquote>
 * ''Lingaha lud, ka i liha linneb.''
+* ''Miš oma lud, ka sid' liha-ki.''
 * ''Veraz liha magedamb.''
 </blockquote>
 
