/* Ristitun hibjaha sidotud vepsän muštatišed */ +

--- a/Ristitun_hibj.mw
+++ b/Ristitun_hibj.mw
@@ -7,6 +7,7 @@ Ristitun hibjas erištadas [[pä]]d, [[kagl]]ad, [[hibjrung]]od, [[käzi|ülä-]
 == Ristitun hibjaha sidotud vepsän muštatišed ==
 <blockquote>
 * ''Astud, ka sil'mäd avaida, a su saupta.''
+* ''Kaks' sil'mäd edemba nägeba, mi üks'.''
 * ''Miččen kobr kändab, mugoman i hibj kandab.''
 * ''Persken al om läm', a nenan al om vilu.''
 * ''Pidaiži sil'mile olda edes i tagan.''
