--- a/2_(lugu).mw
+++ b/2_(lugu).mw
@@ -11,6 +11,7 @@
 * ''Hüvä vaza kaht emid imeb, a paha ühten-ki kadotab.''
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kaks' kondjad ühtes pezas ei voigoi eläda.''
+* ''Kaks' sil'mäd edemba nägeba, mi üks'.''
 * ''Kurdhele kaks' kerdad ei sanugoi.''
 * ''Lapses om äi ližad: kalan sab da kaks' söb.''
 * ''Ühtele om hüvä, a kahtele — paremb.''
