/* Vedhe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Vezi.mw
+++ b/Vezi.mw
@@ -19,7 +19,7 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Uhk, uhkvezi'' — lumenalaine vezi.
 
 == Vedhe sidodud vepsän muštatišed da ozoitesed ==
-;Muštatišed
+=== Muštatišed ===
 <blockquote>
 * ''Aig astub, kuti vezi jokseb.''
 * ''Heinäd alemb, vet ülemb.''
@@ -27,6 +27,7 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Kadoi kuti kala vedhe.''
 * ''Kala vedeta ei elä.''
 * ''Leib da vezi — saldatan söm.''
+* ''Märg ei varaida vet.''
 * ''Palanu lämoid ei varaida, a upnu — vet.''
 * ''Toižes kodiš i vet toižin kandištas.''
 * ''Tünäs vedes sured kalad kudodas.''
@@ -35,7 +36,7 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Vezi karaižen löudab.''
 </blockquote>
 
-;Ozoitez
+=== Ozoitez ===
 <blockquote>
 * Must härgaine om lujas joll'akaz, hot' äjak vet anda, ka kaiken job. (küuduk)
 </blockquote>
