--- a/Gaz_(lidn).mw
+++ b/Gaz_(lidn).mw
@@ -18,7 +18,9 @@
 '''Gaz''' ({{lang-ar|غزة}} ''Ġazzah'' [ˈɣazza], {{lang-he|עזה}} ''Aza'', amuine ''Ġāzā'') om lidn [[Izrail'|Izrailin]] päivlaskmaižel randal. Se om [[Palestin]]an avtonomijan kaikiš suremb lidn, [[Gazan sektor]]an pälidn.
 
 == Istorii ==
-Eländpunktan aluz om pandud amuižen aigan, 3.-2. voz'tuhal EME. Mainitase [[Biblii|Biblijas]] 22 kerdad.
+Eländpunktan aluz om pandud amuižen aigan, 3.-2. voz'tuhal EME. Mainitase [[Biblii|Biblijas]] 22 kerdad. Anastihe lidnad paksus sen geografižen sijadusen tagut letetazangišton röunanno. Lidn om arabine vspäi 634.
+
+Vll 1516−1917 Gaz mülüi [[Ottomanan imperii|Osmanan imperijha]].
 
 == Geografijan andmused ==
 Lidn sijadase [[Keskmeri|Keskmeren]] suvipäivnouzmaižel randal, 30 m ü.m.t. keskmäižel korktusel.
@@ -27,6 +29,8 @@ Klimat om [[subtropine vö|subtropine]] Keskmeren. Läz kaik sadegid paneb kül'
 
 == Eläjad ==
 Vl 2017 eläjiden lugu oli 590 481 ristitud 45 km² pindal. Severz'-se universitetoid, meriport.
+
+Uskondan mödhe läz kaik eläjad oma islamanuskojad-[[sunnitad]]. Hristanuskojiden kaks'tuhaine kund om lidnas, [[ortodoksine hristanuskond|ortodoksižed hristanuskojad]] tobjimalaz.
 
 == Homaičendad ==
 <references />
