*Empty MediaWiki Message*

--- a/Maturin.mw
+++ b/Maturin.mw
@@ -13,7 +13,7 @@
  | Telefonkod = +58-(0)291
  | Aigvö = [[UTC]]−4
 }}
-'''Maturin''' ({{lang-es|Maturín}}) om lidn [[Venesuel]]an pohjoižpäivnouzmas. Se om valdkundan kahesanz' lidn eläjiden lugun mödhe, [[Monagas]]-štatan administrativine keskuz.
+'''Maturin''' ({{lang-es|Maturín}} [matuˈɾin]) om lidn [[Venesuel]]an pohjoižpäivnouzmas. Se om valdkundan kahesanz' lidn eläjiden lugun mödhe, [[Monagas]]-štatan administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud vn 1760 tal'vkus kuti franciskalaižiden [[katoline jumalankodikund|katoline]] missii kändmaha indejalaižid ičeze uskojikš.
