--- a/Maturin.mw
+++ b/Maturin.mw
@@ -26,7 +26,7 @@ Lidn sijadase 67 m ü.m.t. keskmäižel korktusel. Matkad [[Kariban meri|Kariban
 == Eläjad ==
 Vl 2015 eläjiden lugu oli 514 046 ristitud.
 
-Kaikiš suremb valdkundas futbolstadion (52 tuh. kacujid). Rahvahidenkeskeine lendimport.
+Kaikiš suremb valdkundas «Monumental' de Maturin»-futbolstadion (52 tuh. kacujid). Rahvahidenkeskeine Hose Tadeo Monagas-lendimport (''MUN / SVMT'') radab, tehtas reisid Venesuelan erasihe järedoihe lidnoihe.
 
 == Homaičendad ==
 <references />
