+ galerei, aktualizacii, +hom

--- a/Kemerovo.mw
+++ b/Kemerovo.mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Kemerovo<br />Кемерово
- | Lidnanznam = Kemerovo COA.svg
- | Flag = Kemerovo-flag.png
+ | Lidnanznam = Coat of arms of Kemerovo (2019).svg
+ | Flag = Flag of Kemerovo.svg
  | Lidnanznam text = Kemerovon lidnanznam
  | Flag text = Kemerovon flag
  | Valdkund = Venäma
- | Eläjiden lugu = 558,973
- | Voz' = 2018
+ | Eläjiden lugu = 552,546
+ | Voz' = 2021
  | Pind = 294.8
  | Fail = Kemerovo1.jpg
  | Pämez' = Il'ja Seredük<br />(reduku 2016—)
@@ -23,17 +23,17 @@ Ezmäižen kerdan ''Kemerovo-külä'' mainitase kirjutadud purtkiš vl 1721. Nü
 == Geografijan andmused ==
 Lidn sijadase agjan pohjoižes, seižub [[Tom' (Obin ližajogi)|Tom'-jogen]] da sen [[Sur' Kamišnai|Iskitimk]]-ližajogen molembil randoil, 140 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Moskv]]hasai om 2997 km päivlaskmha orhal vai 3601 km avtotedme. Lähembaižed järedad lidnad oma [[Novokuzneck]] (218 km suvhe avtotedme), [[Novosibirsk]] (260 km päivlaskmha avtotedme) i [[Tomsk]] (218 km lodeheze avtotedme). Ezilidnad oma [[Berözovskii (Kemerovon agj)|Berözovskii]] 2 km pohjoižpäivnouzmha i [[Topki]] 10 km päivlaskmha orhal Kemerovon röunaspäi.
 
-Kemerovo jagase vidhe administrativižhe rajonha. Se om lidnümbrikon üks'jäine eländpunkt.
+Kemerovo jagase videks administrativižeks rajonaks. Se om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 532 981 ristitud. Kaikiš suremb ristitišt om nügüd' (vl 2018), agjan videndez.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 532 981 ristitud. Kaikiš suremb ristitišt oli 558 973 eläjad vl 2018, agjan videndez.
 
 Rahvahad (enamba 0,5% vl 2010): [[venälaižed]] — 94,6%, [[totarlaižed]] — 1,3%, [[ukrainalaižed]] — 0,7%, [[armenijalaižed]] — 0,6%, [[saksalaižed]] — 0,5%, toižed rahvahad — 2,3%.
 
 == Ižanduz da transport ==
 [[Kivihil'|Kivihilen]] samine, kivivoinhimižen produkcijan pästand da sömtegimišt harakterizuidas lidnad.
 
-Kemerovo om olmas avtotesol'meks. Kaks' avtotesildad da üks' raudtesild ühtenzoittas Tomin randoid. Avtobusad, trolleibusad, tramvaid da taksid oma kundaližeks transportaks lidnas. Rahvahidenkeskeine civiline Aleksei Leonovan nimel nimitadud «Kemerovo»-lendimport (''KEJ / КРВ'') sijadase läz lidnad 3 kilometras sen suvipäivnouzmaižes rounaspäi. Sišpäi tehtas reisid [[Tailand]]ha, [[Vjetnam]]ha, mugažo [[Moskv]]ha, [[Soči]]he i [[Simferopol'|Simferopolihe]].
+Kemerovo om olmas avtotesol'meks. Kaks' avtotesildad da üks' raudtesild ühtenzoittas Tomin randoid. Avtobusad, trolleibusad, tramvaid da taksid oma kundaližeks transportaks lidnas. Rahvahidenkeskeine civiline Aleksei Leonovan nimel nimitadud «Kemerovo»-lendimport<ref>[http://airkem.ru/ Kemerovon rahvahidenkeskeižen lendimportan sait (''airkem.ru'').] {{ref-ru}}</ref> (''KEJ / КРВ'', 512 tuh. passažiroid vl 2019) sijadase läz lidnad koumes kilometras sen suvipäivnouzmaižes rounaspäi. Sišpäi tehtas reisid [[Tailand]]ha, [[Vjetnam]]ha, [[Kirgizstan]]ha, mugažo [[Moskv]]ha, [[Novosibirsk]]ha, [[Soči]]he i [[Simferopol'|Simferopolihe]].
 
 == Tetabad ristitud ==
 ;Sündnuded
@@ -41,6 +41,20 @@ Kemerovo om olmas avtotesol'meks. Kaks' avtotesildad da üks' raudtesild ühtenz
 ;Elänuded
 * [[Leonov Aleksei Arhipovič|Aleksei Leonov]] (sünd. 1934) — venälaine mez', Nevondkundaližen Ühtištusen kosmonavt nomer 11, läksi kosmosan avarudehe ezmäižeks mail'mas.
 * [[Panin Andrei|Andrei Panin]] (1962−2013) — oli Venäman akt'or.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Kemerovo City Council.jpg|Lidnan Rahvahanezitajiden Nevondkundan i Administracijan sauvuz vl 2007
+Кемерово, Знаменский кафедральный собор, 2.jpg|Jumalanmaman «Znam»-jumalaižen kafedraline päjumalanpert', vn 2017 nägu
+Кемеровский коксохимический завод.jpg|Kemerovon koksanhimine tegim vl 2020
+Пр.Кузнецкий, Кемеровская ГРЭС, 20.11.2011 - panoramio.jpg|Kemerovon GRES vl 2011
+KuzSTU.jpg|Kemerovon valdkundaline tehnine universitet (2008)
+Главный корпус КемГИК.jpg|Kemerovon valdkundaline kul'turan institut (2016)
+Центральный сквер Театральной площади.jpg|Kemerovon agjan dramteatr A. Lunačarskijan nimed (2018)
+Kemerovo Shopping Mall 1.jpg|«Promenad»-torguimižbobuštuzkompleks i «Kristall»-adivpert' vl 2007
+МАК Леонова.png|Kemerovo-lendimportan uz' terminal vl 2021
+Паровоз в Кемерове.jpg|Kemerovo-päraudtestancijan sauvuz i L-klassan puruvedim-muštnik vl 2007
+</gallery>
 
 == Homaičendad ==
 <references />
