/* Raudha sidodud vepsän muštatišed */ +

--- a/Raud.mw
+++ b/Raud.mw
@@ -19,6 +19,7 @@ Metallal om luja himine reakcine mahtuz. Raud palab puhthan [[hapanik]]an atmosf
 == Raudha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ala pure raudad.''
+* ''Edel raud ratteb, konz mehen sana katteb.''
 * ''Raud ei pala lämoiš.''
 * ''Tago raud kuni palab om.''
 </blockquote>
