/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -16,6 +16,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Ak da lehm, mužik da hebo.''
 * ''Ak mužikatoi — kutnä haumeh aidatoi.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
+* ''Edel raud ratteb, konz mehen sana katteb.''
 * ''Ei kaik mehed olgoi, kudambad kadjoid kandištas.''
 * ''Ei nimi mest pahenda, a mez' nimen.''
 * ''Ei olnu se mez' bedas, ken toižele ei abuta.''
