/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -21,6 +21,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Pahal ristitul mugomad i paginad.''
 * ''Pajatada om paremb ühtes, a pagišta eriži.''
 * ''Sanal voib mez' rikta.''
+* ''Sanaspäi — mez', sarvespäi — härg.''
 * ''Sanoišpäi leibäd ed pašta.''
 * ''Sanub, kuti haugol pähä iškeb.''
 * ''Sarnaspäi vaihid ed roi.''
