/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -36,6 +36,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Mužik oli verdunu Piterin päle kümne vot, a Piter-se ei ni olend tenu.''
 * ''Oled mez' ka ole, a ed ole ka kole.''
 * ''Sanal voib mez' rikta.''
+* ''Sanaspäi — mez', sarvespäi — härg.''
 * ''Söm mehen kandišeb.''
 </blockquote>
 
