/* Ristithu sidodud vepsän muštatišed */

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -24,6 +24,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 <blockquote>
 * ''Ala usko nikelle, kuni iče ed näge.''
 * ''Ei rad ristitud riko, a hol'.''
+* ''Gorä ei kävele puidme, a käveleb ristituidme.''
 * ''Hebod taganpäi, koirad edespäi, ristitud kaikiš polišpäi tarbiž varaita.''
 * ''Järed da äred, pen' da mahtav.''
 * ''Kana eile lind, ak eile ristit.''
