/* Kädehe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Käzi.mw
+++ b/Käzi.mw
@@ -44,6 +44,7 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 * ''Mehel om mela kädes, venehen jumal veb.''
 * ''Miččen kobr kändab, mugoman i hibj kandab.''
 * ''Midä käzi tegeb, sidä sil'm kacub.''
+* ''Necil emägal peigol ei ole kämnehe kaznu.''
 * ''Ota kädehe dai tedištad.''
 * ''Otajan käzi ei surdu, a andajan surdub.''
 * ''Sil'mad varaitas, käded ratas.''
