--- a/Ristit.mw
+++ b/Ristit.mw
@@ -28,6 +28,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Hebod taganpäi, koirad edespäi, ristitud kaikiš polišpäi tarbiž varaita.''
 * ''Järed da äred, pen' da mahtav.''
 * ''Kana eile lind, ak eile ristit.''
+* ''Ken emägaks rodiše, ka se ei ole ristit.'' (naižen jügedan ozan polhe)
 * ''Ni küläs kündai, ni lidnas lendai.'' (nimihe ei sättu ristitun polhe)
 * ''Om paremb kacta nagrajan suhu, mi itkijan.''
 * ''Pahal ristitul mugomad i paginad.''
