/* Naižhe sidodud vepsän muštatišed */ +

--- a/Naine.mw
+++ b/Naine.mw
@@ -15,6 +15,7 @@ Naižen alaigäčud oma [[neičukaine]] i [[neižne]].
 * ''Hibuz pit'k, a mel' lühüd.'' (naižiden polhe)
 * ''Kaiked tot akale ala sanu.''
 * ''Kana eile lind, ak eile ristit.''
+* ''Ken emägaks rodiše, ka se ei ole ristit.'' (naižen jügedan ozan polhe)
 * ''Koume akad dai suim.''
 * ''Kut ei sättugoi länged sigale, muga ei sättu vin akale.''
 * ''Mužik ei ole ak, lehm ei ole hebo.''
