/* Kädehe sidodud vepsän muštatišed da ozoitesed */

--- a/Käzi.mw
+++ b/Käzi.mw
@@ -47,7 +47,7 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 * ''Necil emägal peigol ei ole kämnehe kaznu.''
 * ''Ota kädehe dai tedištad.''
 * ''Otajan käzi ei surdu, a andajan surdub.''
-* ''Sil'mad varaitas, käded ratas.''
+* ''Sil'mad varaitas, (a sogedad) käded ratas.''
 * ''Verhad käded hüväd, a ei olgoi südäimen mödhe.''
 * ''Ühtel kädel droči, toižel lö.''
 * ''Ühten käden pezed, toine iče pezese.''
