--- a/Taivaz.mw
+++ b/Taivaz.mw
@@ -11,6 +11,7 @@
 === Muštatišed ===
 <blockquote>
 * ''Eile rad taivhas, a om mas.''
+* ''Kittäs, ka kuti taivhale letas.'' (kittäs liigan)
 * ''Kur'g taivhas, a muna perskes.'' (''pästtud voimusen polhe'')
 * ''Samba libub hagole, meletab, miše jo taivhas om.''
 * ''Su avaida, ka taivhaspäi ei lankte.''
