/* Taivhaze sidodud vepsän muštatišed da ozoitesed */

--- a/Taivaz.mw
+++ b/Taivaz.mw
@@ -12,7 +12,7 @@
 <blockquote>
 * ''Eile rad taivhas, a om mas.''
 * ''Kittäs, ka kuti taivhale letas.'' (kittäs liigan)
-* ''Kur'g taivhas, a muna perskes.'' (''pästtud voimusen polhe'')
+* ''Kur'g taivhas, a muna perskes.'' (pästtud voimusen polhe)
 * ''Samba libub hagole, meletab, miše jo taivhas om.''
 * ''Su avaida, ka taivhaspäi ei lankte.''
 * ''Taivaz om korktal, ei kule rahvast.''
