/* Üks'-lugusanha sidodud vepsän muštatišed da ozoitesed */ +

--- a/1_(lugu).mw
+++ b/1_(lugu).mw
@@ -15,6 +15,7 @@ Miččen taht lugun äikerdoičend ühteks andab sidä-žo lugud, jagamine ühte
 * ''Ei kaht carid ühthe lidnha mülütagoi.''
 * ''Ei päiväine ühtei ühtes čuraspäi pašta.''
 * ''Hüvä vaza kaht emid imeb, a paha ühten-ki kadotab.''
+* ''Kaik oma ühtel kuval kuvatud.''
 * ''Kaks' kondjad ühtes pezas ei voigoi eläda.''
 * ''Kaks' sil'mäd edemba nägeba, mi üks'.''
 * ''Käded oma ühted, ei ole niid ühesa.'' (ei voi ehttä tehta kaiked)
