/* Medehe sidotud vepsän muštatiž */ +

--- a/Mezi.mw
+++ b/Mezi.mw
@@ -22,8 +22,9 @@ Mezi om bakterijan- i senüdenvastaine. Effektivine abutuz spravitamha satatesid
 
 [[Allergii]] oleskeleb erasil ristituil meden ližadusidenke taguiči.
 
-== Medehe sidotud vepsän muštatiž ==
+== Medehe sidodud vepsän muštatišed ==
 <blockquote>
+* ''Huled — medes, ka tervehtajid om, a tegesoiš tervas — ka ei linne.''
 * ''Kelen päl om met, a kelen al — jäd.''
 </blockquote>
 
