/* Kuzhe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Kuz'.mw
+++ b/Kuz'.mw
@@ -78,6 +78,7 @@ Kaik 35 erikod da 2 gibridad mülüdas neche heimho [[Germplasm Resources Inform
 * ''Kezal kaikutte kuzhaine pästab öks.''
 * ''Koivuižehe kandoho kuzhaine ei kazva.''
 * ''Käbu kuzespäi edahaks ei lankte.''
+* ''Mel'hižen mehenke i kuzen al om čoma.''
 </blockquote>
 
 === Ozoitez ===
