/* Armastushe sidodud vepsän muštatišed */ +

--- a/Armastuz.mw
+++ b/Armastuz.mw
@@ -15,6 +15,7 @@ Amuižed grekalaižed erištiba armastusen toižendoid: kanzas («storge»), seb
 * ''Armhemb ičtaiž ei ole nikeda.''
 * ''Hambhan kibu da mel'heižen kibu oma ühtejiččed.''
 * ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
+* ''Mel'hižen mehenke i kuzen al om čoma.''
 * ''Solatomad särpta da ei mel'hišt čukoida.''
 * ''Äi om hüvid, da vähä om armhid.''
 </blockquote>
