--- a/Söm.mw
+++ b/Söm.mw
@@ -38,6 +38,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Nagrižpirgas eile sömäd, nekrutas eile oluhad.''
 * ''Om pök söb seičeme sömäd, toine pök söb ühten sömän i sen penikaižen.''
 * ''Rad radon sijas, a sönd — söndan sijas.''
+* ''Rates om lašk, a södes om vahv.''
 * ''Sapkoid kuluta ed — mustikašt sö ed.''
 * ''Sö čomad lent i pida čomad mel't.''
 * ''Sö kromaine, ka linned priha čomaine.''
