--- a/Söm.mw
+++ b/Söm.mw
@@ -30,6 +30,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Lehm tanhal — söm pertiš.''
 * ''Leib da vezi — saldatan söm.''
 * ''Luzikaine, ole hüvä, mäne sömha!''
+* ''Luzikal sötab, a luzikvardel sil'män kaivab.''
 * ''Mahtad munid söda, ka mahta i kanoid sötta.''
 * ''Mez' ei voi olda sömäta.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
