/* Sähä sidodud vepsän muštatišed */ +

--- a/Sä.mw
+++ b/Sä.mw
@@ -71,7 +71,7 @@ Sän rekordad oma ekstremaližed meteorologižed ozutajad, kudambid registriruih
 == Sähä sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ištu merenno, varasta säd.''
-* ''Laškale kaiken — huba sä.''
+* ''Laškale kaiken — huba sä. / Ležnale mehele kaiken om huba sä.''
 * ''Meiden pertid sänke ei ridelkoi.''
 * ''Paha sä lebaitas ei anda.''
 * ''Sä heinäd paneb.''
