/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -22,6 +22,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Ei olnu se mez' bedas, ken toižele ei abuta.''
 * ''Ei severz' mehid, kuverz' kadjoid.''
 * ''Iče ole mužik, siloi anda toižile-ki arv.''
+* ''Kaikuččel mehel oma erazvuiččed meled.''
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Küläd eile koiratomad, mad eile mehetomad.''
 * ''Mehel om mela kädes, venehen jumal veb.''
