*Empty MediaWiki Message*

--- a/4Minute.mw
+++ b/4Minute.mw
@@ -16,7 +16,7 @@
 '''«4Minute»''' ({{lang-ko|포미닛}} ''Pominis'' «nell' minutad») oli neiččiden [[Suvikorei|suvikorejine]] muzikgrupp, kudamb oli edestanu muzikad [[kei-pop]]- da [[džeipop]]-stiliš.
 
 == Istorii ==
-Gruppan aluz oli pandud vl 2009. Vn 2016 kezakul Cube Entertainment tedoti<ref>[http://english.yonhapnews.co.kr/news/2016/06/13/0200000000AEN20160613002900315.html?be0032c0 4Minute to disband, only Hyuna renews contract (4Minute-gruppale pidab čihota, Höna jätktab kontrakt vaiše). — ''English.yonhapnews.co.kr'', 2016-06-13.] {{ref-en}}</ref> gruppan čihodamižes ühtnijoiden enambusen pučindan tagut kontraktoiden jätktusespäi.
+Gruppan aluz oli pandud vl 2009. Vn 2016 kezakul Cube Entertainment tedoti<ref>[https://web.archive.org/web/20161004224500/http://english.yonhapnews.co.kr/news/2016/06/13/0200000000AEN20160613002900315.html?be0032c0 4Minute to disband, only Hyuna renews contract (4Minute-gruppale pidab čihota, Höna jätktab kontrakt vaiše). — ''English.yonhapnews.co.kr'', 2016-06-13.] (vebarhivas) {{ref-en}}</ref> gruppan čihodamižes ühtnijoiden enambusen pučindan tagut kontraktoiden jätktusespäi.
 
 == Enččed ühtnijad ==
 * Nam Džihön
