+galerei, +hom, aktualizacii

--- a/Soročinsk.mw
+++ b/Soročinsk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Soročinskan lidnanznam
  | Flag text = Soročinskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 27,912
- | Voz' = 2017
+ | Eläjiden lugu = 26,980
+ | Voz' = 2021
  | Pind = 55.93
  | Fail = Сорочинск. Западный микрорайон..jpg
  | Pämez' = Tatjana Melentjeva<br />(tal'vku 2010—)
@@ -14,20 +14,33 @@
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-'''Soročinsk''' ({{lang-ru|Сорочинск}}) om [[Venäma]]n lidn [[Orenburgan agj]]an päivlaskmas. Se om [[Soročinskan lidnümbrik]]on administrativine keskuz, vl 2016 mülüti Soročinskan rajonad.
+'''Soročinsk''' ({{lang-ru|Соро́чинск}}) om [[Venäma]]n lidn [[Orenburgan agj]]an päivlaskmas. Se om [[Soročinskan lidnümbrik]]on administrativine keskuz, vl 2016 mülüti Soročinskan rajonad.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1737 kuti ''Soročinkan lidnuz'', nimitihe lähižen Soročink-jogen mödhe. 19. voz'sadaspäi oli ''Soročinskoje-žiloks''. Saudihe ''Soročinskai-raudtestancijad'' «Samar — Orenburg»-jonol, läbiti lidnad vl 1877.
 
-Žilo sai lidnan statusad vn 1945 16. päiväl semendkud. Lidn šingotase [[kivivoi]]n samižen edheotandoil (650 mareigud lidnümbrikos) i sijaližen maižandusen produkcijan ümbriradmižel (leibänkombinat, lihakombinat).
+Žilo sai lidnan statusad vn 1945 16. päiväl semendkud. Soročinsk šingotase [[kivivoi]]n samižen edheotandoil (650 mareigud lidnümbrikos) i sijaližen maižandusen produkcijan ümbriradmižel (leibänkombinat, lihakombinat).
 
 == Geografijan andmused ==
 Lidn sijadase [[Samar (jogi)|Samaranjogen]] hural randal, 100 m ü.m.t. keskmäižel korktusel. Soročinskan vezivaradim (35,56 km²) om ülezjogen reguliruimha Samaran vedhut. Matkad [[Orenburg]]hasai om 170 km suvipäivnouzmha. Lähembaine lidn om [[Buzuluk]] 73 km lodeheze orhal vai 90 km kaikil teil.
 
-40 žilod mülüdas lidnümbrikho Soročinskan ližaks. Lidnümbrikon pind — 2763,18 km².
+Kaik 40 žilod mülüdas lidnümbrikho Soročinskan ližaks. Lidnümbrikon pind — 2763,18 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe, lidnan eläjiden lugu oli 29 249 ristitud. Kaikiš suremb ristitišt oli 29..30 tuhad vozil 1996−2011 (vl 2001 — 30 700 rist.). Vl 2017 kaik 40 853 ristitud elädas lidnümbrikos, sidä kesken kaks' koumandest oma Soročinskan eläjad.
+Vn 2010 Venäman rahvahanlugemižen mödhe, lidnan eläjiden lugu oli 29 249 ristitud. Kaikiš suremb ristitišt oli 29..30 tuhad vozil 1996−2011 (30 700 rist. vl 2001). Vl 2017 kaik 40 853 ristitud elihe lidnümbrikos, sidä kesken kaks' koumandest oliba Soročinskan eläjad.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] viž pühäpertid<ref>[http://sobory.ru/geo/locat/12135 Soročinskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: nell' jumalanpertid i časoun'.
+
+Soročinskan veterinarine tehnikum<ref>[http://svt.orensau.ru/ Soročinskan veterinarižen tehnikuman sait (''svt.orensau.ru'')] i [http://orensau.ru/ru/sorochinskijveterinarnyjtehnikum sen lehtpol' ''orensau.ru''-saital.] {{ref-ru}}</ref> (Orenburgan valdkundaližen agrarižen universitetan filial) om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация..jpg|Lidnan administracijan sauvuz (2012)
+Храм..jpg|Mikoi-arhangelan jumalanpert', vn 2012 nägu
+Сорочинск. Водохранилище..jpg|Soročinskan vezivaradim vl 2012
+Сорочинск СДЮСШОР по Настольному Теннису (3).JPG|[[Laudtennis]]an sportškol (2007)
+Вокзал..jpg|Soročinskai-päraudtestancijan sauvuz vl 2012
+</gallery>
 
 == Homaičendad ==
 <references />
