--- a/Abdulino.mw
+++ b/Abdulino.mw
@@ -1,20 +1,20 @@
 {{Eländpunkt
  | Nimi = Abdulino<br />Абдулино
- | Lidnanznam = 
+ | Lidnanznam = Coat of Arms of Abdulino (Orenburg oblast).png
  | Flag = Flag of Abdulino (Orenburg oblast).png
  | Lidnanznam text = Abdulinon lidnanznam
  | Flag text = Abdulinon flag
  | Valdkund = Venäma
- | Eläjiden lugu = 19,222
- | Voz' = 2017
+ | Eläjiden lugu = 18,420
+ | Voz' = 2021
  | Pind = 47
- | Fail = Abdulino railway station.jpg
+ | Fail = Железная дорога в Абдулино - panoramio.jpg
  | Pämez' = Vladimir Naseikin<br />(viluku 2016—)
  | Telefonkod = +7-35355-xx-xxx
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-'''Abdulino''' ({{lang-ru|Абдулино}}) om [[Venäma]]n lidn [[Orenburgan agj]]an lodehes. Se om [[Abdulinon lidnümbrik]]on (1785 km²) administrativine keskuz da sen ristitišton 70%. Edel 2016 vot nimitihe lidnümbrikod Abdulinon rajonaks. Se mülütab 49 žilod da küläd.
+'''Abdulino''' ({{lang-ru|Абдулино}}) om [[Venäma]]n lidn [[Orenburgan agj]]an lodehes. Se om [[Abdulinon lidnümbrik]]on (1785 km²) administrativine keskuz da sen ristitišton seičeme kümnendest. Edel 2016. vot nimitihe lidnümbrikod Abdulinon rajonaks. Se mülütab 49 žilod da küläd.
 
 == Enzne ==
 Eläbzoittud ''Abdulovankülä'' ({{lang-ru|деревня Абдулова}}) mainitase ezmäižen kerdan vodel 1795. Vodespäi 1811 nimitase nügüdläižikš. Vodel 1888 raudte tuli lidnha, ühtennimine raudtestancii om «[[Samar]] — [[Uf]]»-jonol. Vodel 1895 «Перов и Зуев»-kompanii sauvoi tegint ümbriradamha [[greč]]ad surimeks. Vodelpäi 1923 Abdulino om lidnan statusanke.
@@ -25,7 +25,19 @@ Nügüd'aigan lidn om maižanduzrajonan keskuz. Leibänkombinat da maidkombinat 
 Lidn sijadase Tiris-jogen randoil ({{lang-ru|Тирис}}, [[Ik (Kaman ližajogi)|Ik-jogen]] bassein), [[Uralmäged|Uralan]] ezimägištol, 190 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Orenburg]]hasai om 280 km suvipäivnouzmha «Kazan' — Orenburg»-avtotedme (R239), röunhasai [[Baškortostan]]anke — 4 km pohjoižpäivnouzmha lidnaspäi. Avtote om lidnan päivnouzmaižeks röunaks.
 
 == Eläjad ==
-Voden 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 20 173 ristitud. Kaikiš suremb ristitišt oli vl 1959 — 29 976 eläjad. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om lidnas.
+Voden 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 20 173 ristitud. Kaikiš suremb ristitišt oli 29 976 eläjad vl 1959.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kuz' pühäpertid<ref>[http://sobory.ru/geo/locat/11836 Abdulinon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: koume jumalanpertid i koume časounäd.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Паровоз Л-177 на станции Абдулино.jpg|L-klassan puruvedim-muštnik päraudtestancijanno (2021)
+Автовокзал и торговый центр в Абдулино - panoramio.jpg|Avtobusstancii i «Ekspress»-torguindkeskuz vl 2007
+Abdulino railway station.jpg|Abdulino-päraudtestancijan sauvuz vl 20
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://mo-ab-area.orb.ru/ Abdulino-lidnümbrikon oficialine sait (''mo-ab-area.orb.ru'').] {{ref-ru}}
