*Empty MediaWiki Message*

--- a/Abdulino.mw
+++ b/Abdulino.mw
@@ -14,7 +14,7 @@
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-'''Abdulino''' ({{lang-ru|Абдулино}}) om [[Venäma]]n lidn [[Orenburgan agj]]an lodehes. Se om [[Abdulinon lidnümbrik]]on (1785 km²) administrativine keskuz da sen ristitišton seičeme kümnendest. Edel 2016. vot nimitihe lidnümbrikod Abdulinon rajonaks. Se mülütab 49 žilod da küläd.
+'''Abdulino''' ({{lang-ru|Абду́лино}}) om [[Venäma]]n lidn [[Orenburgan agj]]an lodehes. Se om [[Abdulinon lidnümbrik]]on (1785 km²) administrativine keskuz da sen ristitišton seičeme kümnendest. Edel 2016. vot nimitihe lidnümbrikod Abdulinon rajonaks. Se mülütab 49 žilod da küläd.
 
 == Enzne ==
 Eläbzoittud ''Abdulovankülä'' ({{lang-ru|деревня Абдулова}}) mainitase ezmäižen kerdan vodel 1795. Vodespäi 1811 nimitase nügüdläižikš. Vodel 1888 raudte tuli lidnha, ühtennimine raudtestancii om «[[Samar]] — [[Uf]]»-jonol. Vodel 1895 «Перов и Зуев»-kompanii sauvoi tegint ümbriradamha [[greč]]ad surimeks. Vodelpäi 1923 Abdulino om lidnan statusanke.
@@ -33,14 +33,14 @@ Voden 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 20 173 r
 <gallery mode="packed" heights="125px">
 Паровоз Л-177 на станции Абдулино.jpg|L-klassan puruvedim-muštnik päraudtestancijanno (2021)
 Автовокзал и торговый центр в Абдулино - panoramio.jpg|Avtobusstancii i «Ekspress»-torguindkeskuz vl 2007
-Abdulino railway station.jpg|Abdulino-päraudtestancijan sauvuz vl 20
+Abdulino railway station.jpg|Abdulino-päraudtestancijan sauvuz vl 2009
 </gallery>
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://mo-ab-area.orb.ru/ Abdulino-lidnümbrikon oficialine sait (''mo-ab-area.orb.ru'').] {{ref-ru}}
+* [http://mo-ab.orb.ru/ Abdulino-lidnümbrikon oficialine sait (''mo-ab.orb.ru'').] {{ref-ru}}
 {{Commons|Category:Abdulino}}
 
 {{Orenburgan agjan lidnad}}
